# python-project-lvl2

./: .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: flake8_linter.yml  pyci.yml  tests_and_linter.yml  we-make.yml
gendiff/: __init__.py  diff_tree.py  extract.py  formatter.py  gendiff.py  generate.py  parser.py  parsing.py
gendiff/formatters/: __init__.py  choose.py  json_format.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py  gendiff_cli.py  gendiff_parser.py
tests/: __init__.py  test_diff_building.py  test_diff_tree.py  test_formatter.py  test_formatters.py  test_gendiff.py  test_generate.py  test_parser.py  test_parsing.py
tests/fixtures/: dicts.py  expected.py  file1_nested.yaml  fixture.py
tests/fixtures/expected/: diff_tree_result.py
tests/fixtures/expected/formatters/: json_format_flat.txt  json_format_nested.txt  render_result.py
tests/fixtures/files/yaml/: nested_file2.yml
